includes/assets/css/admin.css
/**
 * VGSR Entity Admin Styles
 *
 * @package VGSR Entity
 * @subpackage Administration
 */

.input-text-wrap input {
	vertical-align: middle;
}

/* wp-admin/post.php */

#vgsr-entity-details .alignleft {
	float: none;
}

	#vgsr-entity-details span.title {
		display: inline-block;
		width: 6em;
		font-weight: bold;
		vertical-align: middle;
	}

	/* Feature: Logo */

	#vgsr-entity-details #entity-logo {
		position: relative;
		max-width: 266px;
		width: calc( 100% - 6.3em ); /* why cannot 6em ? */
		display: inline-block;
		vertical-align: middle;
	}

	#vgsr-entity-details #set-entity-logo {
		display: inline-block;
	}

		#vgsr-entity-details #entity-logo img {
			max-width: 100%;
			height: auto;
			width: auto;
			vertical-align: bottom; /* remove trailing space in <a> */
		}

	#vgsr-entity-details #remove-entity-logo {
		position: absolute;
		right: 0;
		text-decoration: none;
		border-radius: 50%;
		color: #a00;
		visibility: hidden;
	}

		#vgsr-entity-details #remove-entity-logo:hover {
			color: #f00;
		}

		#vgsr-entity-details #entity-logo:hover #remove-entity-logo {
			visibility: visible;
		}

		#vgsr-entity-details #remove-entity-logo:after {
			content: '\f158'; /* dashicons-no */
			font-family: dashicons;
			display: block;
			width: 32px;
			height: 32px;
			font-size: 32px;
			line-height: 33px;
		}

/* wp-admin/edit.php */

.inline-edit-row .entity-quick-edit {
	display: none;
}

.column-entity-logo {
	width: 38px; /* logo image width */
}

	th.column-entity-logo {
		position: relative;
		text-indent: -100%;
	}

		th.column-entity-logo:after {
			content: '\f128';
			position: absolute;
			right: 0;
			font-family: dashicons;
			font-size: 20px;
			color: #555;
		}

/* Small screen */
@media screen and (max-width: 782px) {

	/* wp-admin/post.php */

	#vgsr-entity-details #remove-entity-logo {
		visibility: visible;
	}

		#vgsr-entity-details #remove-entity-logo:after {
			width: 42px;
			height: 42px;
			font-size: 42px;
			line-height: 43px;
		}

	/* wp-admin/edit.php */

	.wp-list-table tr th.column-entity-logo,
	.wp-list-table tr td.column-entity-logo {
		display: none !important;
		padding: 0;
	}
}

